# jdyspa-cloudflare

./: .dev.vars  .gitignore  pyproject.toml  wrangler.jsonc  改造方案.md
.github/workflows/: deploy.yml
migrations/: 0001_init.sql
python_modules/fastapi-0.136.3.dist-info/: RECORD
python_modules/idna-3.16.dist-info/: RECORD
python_modules/markdown_it_py-4.2.0.dist-info/: RECORD
python_modules/pygments-2.20.0.dist-info/: RECORD
python_modules/pyjson5/: pyjson5.cp313-win_amd64.pyd
python_modules/pyjson5-2.0.1.dist-info/: METADATA  RECORD
python_modules/pyodide_cli-0.5.0.dist-info/: RECORD
python_modules/pyodide_py-0.29.4.dist-info/: METADATA  RECORD
python_modules/pywrangler/: cli.py  sync.py  types.py  utils.py
python_modules/rsa-4.9.1.dist-info/: RECORD
python_modules/starlette-1.1.0.dist-info/: RECORD
python_modules/workers_py-1.9.4.dist-info/: METADATA  RECORD
src/: worker.py
src/app/: asgi_app.py  main.py
src/app/core/: __init__.py  config.py  database.py  security.py
src/app/routers/: __init__.py  admin.py  auth.py  conferences.py  health.py  hotels.py  participants.py  restaurants.py  seating.py  stats.py  transport.py
src/app/schemas/: __init__.py  conference.py  hotel.py  participant.py  restaurant.py  seating.py  transport.py  user.py
src/app/utils/: __init__.py  crypto.py  email.py
static/: conference_create.html  conference_list.html  conference_manage.html  dashboard.html  forgot_password.html  index.html  login.html  main.html  profile.html  register.html  reset_password.html  transport.html
static/static/css/: main.css
(+11 files in other folders)
