[project]
name = "jdyspa-api"
version = "3.0.0"
description = "重宾接待助手 - Cloudflare Workers + D1 版本"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/worker.py"]
